fixed margin for accommodations div on mobile view

--- a/client/src/components/PropertyCard/PropertyCard.css
+++ b/client/src/components/PropertyCard/PropertyCard.css
@@ -157,6 +157,7 @@
 
   .accommodations {
     align-items: center;
+    margin-right: 5px;
   }
 
   .accommodations p {
